classDiagram
    direction TB

    %% ================================================================
    %% OOD v1-2-1：全域整合圖
    %% OOA 領域 + Push Observer（受約束 CommunityEvent）+ Bot 專用 State
    %% 相較 oodv1-2：CommunityEvent 不再是空介面。
    %% ================================================================

    %% ------------------------------------------------
    %% 社群領域：沿用 OOA-Clean 的類別與既有 FN
    %% ------------------------------------------------
    class WaterballCommunity {
        +currentTime: DateTime
        +login(participant: Participant) void
        +logout(participantId: String) void
        +elapseTime(amount: int, unit: String) void
        +getOnlineParticipants() List~Participant~
        +getOnlineCount() int
        -observers: List~CommunityObserver~
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }
    class Participant {
        <<abstract>>
        +id: String
    }
    class Member {
        +role: Role
        +sendMessage(chatRoom: ChatRoom, content: String, tags: List~String~) void
        +publishPost(forum: Forum, title: String, content: String, tags: List~String~) void
        +commentPost(forum: Forum, postId: String, content: String, tags: List~String~) void
        +startBroadcast(broadcast: Broadcast) void
        +speak(broadcast: Broadcast, content: String) void
        +stopBroadcast(broadcast: Broadcast) void
    }
    class Role {
        <<enumeration>>
        ADMIN
        MEMBER
    }
    class ChatRoom {
        +postMessage(message: Message) void
        -observers: List~CommunityObserver~
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }
    class Forum {
        +createPost(post: Post) void
        +addComment(postId: String, comment: Comment) void
        -observers: List~CommunityObserver~
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }
    class Broadcast {
        +currentSpeakerId: String
        +start(speakerId: String) void
        +speak(voiceMessage: VoiceMessage) void
        +stop(speakerId: String) void
        +isBroadcasting() bool
        -observers: List~CommunityObserver~
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }
    class Message {
        +authorId: String
        +content: String
        +tags: List~String~
    }
    class Post {
        +id: String
        +authorId: String
        +title: String
        +content: String
        +tags: List~String~
        +addComment(comment: Comment) void
    }
    class Comment {
        +authorId: String
        +content: String
        +tags: List~String~
    }
    class VoiceMessage {
        +speakerId: String
        +content: String
    }
    class RecordingSession {
        +recorderId: String
        +addVoice(message: VoiceMessage) void
        +generateReplay() String
    }
    class KnowledgeKingGame {
        +currentQuestionIndex: int
        +startTime: DateTime
        +getCurrentQuestion() Question
        +submitAnswer(memberId: String, answer: String) bool
        +isFinished() bool
        +isTimeout(currentTime: DateTime) bool
        +getWinner() String
    }
    class Question {
        +number: int
        +description: String
        +options: List~String~
        +correctAnswer: String
        +isCorrect(answer: String) bool
    }

    %% ------------------------------------------------
    %% Observer：Push Model。事件基底有固定約束。
    %% ------------------------------------------------
    class Observable {
        <<interface, Subject>>
        +register(observer: CommunityObserver) void
        +unregister(observer: CommunityObserver) void
        +notify(event: CommunityEvent) void
    }
    class CommunityObserver {
        <<interface, Observer>>
        +update(event: CommunityEvent) void
    }
    class CommunityEventType {
        <<enumeration>>
        MESSAGE_RECEIVED
        POST_PUBLISHED
        BROADCAST_STARTED
        VOICE_SPOKEN
        BROADCAST_STOPPED
        TIME_ELAPSED
    }
    class CommunityEvent {
        <<abstract>>
        +type: CommunityEventType
        +dispatchTo(bot: Bot) void
    }
    class MessageReceivedEvent {
        +type: CommunityEventType = MESSAGE_RECEIVED
        +message: Message
        +dispatchTo(bot: Bot) void
    }
    class PostPublishedEvent {
        +type: CommunityEventType = POST_PUBLISHED
        +post: Post
        +dispatchTo(bot: Bot) void
    }
    class BroadcastStartedEvent {
        +type: CommunityEventType = BROADCAST_STARTED
        +speakerId: String
        +dispatchTo(bot: Bot) void
    }
    class VoiceSpokenEvent {
        +type: CommunityEventType = VOICE_SPOKEN
        +voiceMessage: VoiceMessage
        +dispatchTo(bot: Bot) void
    }
    class BroadcastStoppedEvent {
        +type: CommunityEventType = BROADCAST_STOPPED
        +speakerId: String
        +dispatchTo(bot: Bot) void
    }
    class TimeElapsedEvent {
        +type: CommunityEventType = TIME_ELAPSED
        +seconds: int
        +dispatchTo(bot: Bot) void
    }

    %% ------------------------------------------------
    %% State：Bot 是 Context；所有 OOA onXxx FN 同名委派給 State。
    %% ------------------------------------------------
    class State {
        <<interface>>
        +onEnter(bot: Bot) void
        +onExit(bot: Bot) void
        +onMessageReceived(bot: Bot, message: Message) void
        +onPostPublished(bot: Bot, post: Post) void
        +onBroadcastStarted(bot: Bot, speakerId: String) void
        +onVoiceSpoken(bot: Bot, voiceMessage: VoiceMessage) void
        +onBroadcastStopped(bot: Bot, speakerId: String) void
        +onTimeElapsed(bot: Bot, seconds: int) void
    }
    class NormalState {
        <<Concrete State>>
        +onEnter(bot: Bot) void
        +onExit(bot: Bot) void
        +onMessageReceived(bot: Bot, message: Message) void
        +onPostPublished(bot: Bot, post: Post) void
        +onBroadcastStarted(bot: Bot, speakerId: String) void
        +onVoiceSpoken(bot: Bot, voiceMessage: VoiceMessage) void
        +onBroadcastStopped(bot: Bot, speakerId: String) void
        +onTimeElapsed(bot: Bot, seconds: int) void
    }
    class RecordState {
        <<Concrete State>>
        -session: RecordingSession
        +onEnter(bot: Bot) void
        +onExit(bot: Bot) void
        +onMessageReceived(bot: Bot, message: Message) void
        +onPostPublished(bot: Bot, post: Post) void
        +onBroadcastStarted(bot: Bot, speakerId: String) void
        +onVoiceSpoken(bot: Bot, voiceMessage: VoiceMessage) void
        +onBroadcastStopped(bot: Bot, speakerId: String) void
        +onTimeElapsed(bot: Bot, seconds: int) void
    }
    class KnowledgeKingState {
        <<Concrete State>>
        -game: KnowledgeKingGame
        +onEnter(bot: Bot) void
        +onExit(bot: Bot) void
        +onMessageReceived(bot: Bot, message: Message) void
        +onPostPublished(bot: Bot, post: Post) void
        +onBroadcastStarted(bot: Bot, speakerId: String) void
        +onVoiceSpoken(bot: Bot, voiceMessage: VoiceMessage) void
        +onBroadcastStopped(bot: Bot, speakerId: String) void
        +onTimeElapsed(bot: Bot, seconds: int) void
    }
    class Bot {
        <<Concrete Observer + State Context>>
        +id: String = "bot"
        +quota: int
        +replyCycleIndex: int
        -currentState: State
        +update(event: CommunityEvent) void
        +changeState(nextState: State) void
        +onMessageReceived(message: Message) void
        +onPostPublished(post: Post) void
        +onVoiceSpoken(voiceMessage: VoiceMessage) void
        +onBroadcastStarted(speakerId: String) void
        +onBroadcastStopped(speakerId: String) void
        +onTimeElapsed(seconds: int) void
        +replyChatMessage(content: String, tags: List~String~) void
        +commentPost(postId: String, content: String, tags: List~String~) void
        +broadcastVoice(content: String) void
        +resetReplyCycle() void
        +getNextReplyMessage() String
    }

    %% ------------------------------------------------
    %% OOA 原有結構
    %% ------------------------------------------------
    Participant <|-- Member
    Participant <|-- Bot
    Member --> Role
    WaterballCommunity "1" *-- "1" ChatRoom : 擁有
    WaterballCommunity "1" *-- "1" Forum : 擁有
    WaterballCommunity "1" *-- "1" Broadcast : 擁有
    WaterballCommunity "1" *-- "1" Bot : 常駐
    WaterballCommunity "1" o-- "0..*" Participant : 在線參與者
    ChatRoom "1" *-- "0..*" Message
    Forum "1" *-- "0..*" Post
    Post "1" *-- "0..*" Comment
    Broadcast "1" *-- "0..*" VoiceMessage
    RecordingSession "1" o-- "0..*" VoiceMessage : 記錄語音內容
    KnowledgeKingGame "1" *-- "3" Question : 包含題庫

    %% ------------------------------------------------
    %% Push Observer 關係：既有事件來源復用為 Concrete Subject。
    %% ------------------------------------------------
    Observable <|.. ChatRoom
    Observable <|.. Forum
    Observable <|.. Broadcast
    Observable <|.. WaterballCommunity
    CommunityObserver <|.. Bot
    Observable "1" o-- "0..*" CommunityObserver : observers
    Observable ..> CommunityEvent : notify(event)
    CommunityObserver ..> CommunityEvent : update(event)
    Bot ..> Observable : registered to

    CommunityEvent --> CommunityEventType : fixed type
    CommunityEvent <|-- MessageReceivedEvent
    CommunityEvent <|-- PostPublishedEvent
    CommunityEvent <|-- BroadcastStartedEvent
    CommunityEvent <|-- VoiceSpokenEvent
    CommunityEvent <|-- BroadcastStoppedEvent
    CommunityEvent <|-- TimeElapsedEvent
    MessageReceivedEvent --> Message
    PostPublishedEvent --> Post
    VoiceSpokenEvent --> VoiceMessage
    CommunityEvent ..> Bot : dispatchTo(bot)

    %% ------------------------------------------------
    %% State 關係 + 按需 Pull
    %% ------------------------------------------------
    Bot "1" --> "1" State : currentState / delegate
    State <|.. NormalState
    State <|.. RecordState
    State <|.. KnowledgeKingState
    RecordState "1" o-- "0..1" RecordingSession : 錄音活動
    KnowledgeKingState "1" o-- "0..1" KnowledgeKingGame : 知識王活動
    NormalState ..> WaterballCommunity : pull getOnlineCount()\ngetOnlineParticipants()
    KnowledgeKingState ..> WaterballCommunity : pull currentTime
    KnowledgeKingState ..> Broadcast : pull isBroadcasting()
    Bot --> ChatRoom : replyChatMessage()
    Bot --> Forum : commentPost()
    Bot --> Broadcast : broadcastVoice()

    note for CommunityObserver "【Push Model】\n每個 Subject 都以 update(event) 通知 Bot；\nBot.update(event) 固定呼叫 event.dispatchTo(this)。"
    note for CommunityEvent "【受約束的抽象事件】\n不是空介面，也不是 type + Object payload。\n每個子類別必須固定一個既定 CommunityEventType，\n並實作 dispatchTo(bot)，把強型別資料交給\n一個對應的 OOA 既有 Bot.onXxx() FN。"
    note for CommunityEventType "【新增事件的邊界】\n先新增受認可的事件種類，\n再建立事件類別並實作兩個抽象契約。\n不能只塞任意 type 或任意 payload。"
    note for Bot "【固定責任鏈】\nupdate(event) → event.dispatchTo(this)\n→ Bot.onXxx(...) → currentState.onXxx(this, ...)\n事件路由、Bot Context、狀態行為各自分責。"
    note for WaterballCommunity "【按需 Pull】\nState 只有在處理事件需要在線人數、名單或時間時\n才呼叫既有 Query FN；這不是第二套 Observer。"
    note for State "【v1 邊界】\n目前只有主 State；Normal / Record / KnowledgeKing\n內部子階段尚未抽出，是後續 FSM／Composite 的 force。"
